--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>SAUAFG Workshop ICCV 2025</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
+<h1>Workshop on Skilled Activity Understanding, Assessment and Feedback Generation at ICCV 2025</h1>
+<p>International Workshop on AI-driven Skilled Activity Understanding, Assessment and Feedback Generation (SAUAFG). To be organized in conjunction with ICCV 2025.</p>
+<p>Speakers: Dr. Kristen Grauman (UT Austin + FAIR), Dr. Antonino Furnari (University of Catania), Dr. Rogerio Garcia (Intuitive Surgical Inc.), Dr. Ehsan Adeli (Stanford University) </p>
+<p>Organizers: Paritosh Parmar, Angela Yao, Basura Fernando, Brendan Morris</p>  
+<p>More details on Paper Submission Coming Soon!</p>
 </body>
 </html>
