--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 </section>
 
 
-<section id=contact" class="contact section">
+<section id="contact" class="contact section">
     <h2>Contact</h2>
     Please do not hesitate to email us if you have any questions or concerns!
 </section>
