--- a/index.html
+++ b/index.html
@@ -234,9 +234,11 @@
 
 <section class="papersubmission section" id="papersubmission">
     <h2>Paper Submission</h2>
-    We will have two tracks: 1) Proceedings Track; 2) Non-Proceedings Track (present at the workshop, but not included in the proceedings and can also be submitted to future venues + includes papers previously accepted to other venues).
-
-    More information coming soon!
+    <p>We have following two Paper Tracks:</p>
+    <br>
+    <p>1) <strong>Proceedings Track.</strong> Please use this <a href="https://openreview.net/group?id=thecvf.com/ICCV/2025/Workshop/SAUAFG">[Openreview Link]</a> to submit your papers. Please let us know if you face any problems. We recommend you to use Institution emails to register your account on Openreview, as non-institution emails can take upto 2 weeks to register. Please use ICCV paper templates. Page limit, excluding references, is 8 pages. Please strictly follow ICCV paper guidelines. </p>
+    <br>
+    <p>2) <strong>Non-Proceedings Track.</strong> These papers would be presented at the workshop, but not included in the proceedings and can also be submitted to future venues. We also invite papers previously accepted to other venues. This tracks allows to share your work and receive feedback on your work, making it stronger. Further information coming soon!
 </section>
 
 <section class="program section" id="program">
