--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <p>2) <strong>Non-Proceedings Track.</strong> These papers would be presented at the workshop, but not included in
         the proceedings and can also be submitted to future venues. We also invite papers previously accepted to ICCV
         2025 or any other
-        venues. This tracks allows to share your work and receive feedback on your work, making it stronger. Late
+        venues. This tracks allows to share your work and receive feedback on your work, making it stronger. Work-in-Progress or Late
         breaking work providing provocations for new work and ideas to emerge, with or without an accompanying evaluation,
         can also be submitted. Tentative
         Deadline is: <i>July 01, 2025</i>.
