--- a/index.html
+++ b/index.html
@@ -207,6 +207,8 @@
     <p><a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Garcia</strong></a> (Intuitive Surgical)
     </p>
     <p><a href="https://stanford.edu/~eadeli/"><strong>Dr. Ehsan Adeli</strong></a> (Stanford University)</p>
+    <p><a href="https://www.bristol.ac.uk/people/person/Walterio-Mayol-Cuevas-3eaed515-00fd-4112-94a8-7efe5a5fba94/"><strong>Dr. Walterio Mayol-Cuevas</strong></a> (University of Bristol)</p>
+    <p><a href="https://www.gedasbertasius.com/"><strong>Dr. Gedas Bertasius</strong></a> (University of North Carolina, Chapel Hill)</p>
 </section>
 
 
@@ -310,13 +312,19 @@
             <td>Keynote-2 + QA</td>
         </tr>
         <tr>
-            <td>Tea break + Poster Session</td>
-        </tr>
-        <tr>
             <td>Keynote-3 + QA</td>
         </tr>
         <tr>
+            <td>Tea break + Poster Session</td>
+        </tr>
+        <tr>
             <td>Keynote-4 + QA</td>
+        </tr>
+        <tr>
+            <td>Keynote-5 + QA</td>
+        </tr>
+        <tr>
+            <td>Keynote-6 + QA</td>
         </tr>
         <tr>
             <td>Closing Remarks</td>
