--- a/index.html
+++ b/index.html
@@ -281,16 +281,14 @@
     <br>
     <p>1) <strong>Proceedings Track.</strong> Papers accepted to this track will be published in the official
         proceedings. Please use ICCV paper
-        templates. Page limit, excluding references, is 8 pages. Please strictly follow ICCV paper guidelines. Tentative
-        Deadline is: <i>July 01, 2025</i>.</p>
+        templates. Page limit, excluding references, is 8 pages. Please strictly follow ICCV paper guidelines. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 01, 2025</i>.</p>
     <br>
     <p>2) <strong>Non-Proceedings Track.</strong> These papers would be presented at the workshop, but not included in
         the proceedings and can also be submitted to future venues. We also invite papers previously accepted to ICCV
         2025 or any other
         venues. This tracks allows to share your work and receive feedback on your work, making it stronger. Work-in-Progress or Late
         breaking work providing provocations for new work and ideas to emerge, with or without an accompanying evaluation,
-        can also be submitted. Tentative
-        Deadline is: <i>July 01, 2025</i>.
+        can also be submitted. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 01, 2025</i>.
     </p>
     <br>
     <p>Please let us know if you face any problems or have any questions.</p>
