--- a/index.html
+++ b/index.html
@@ -278,10 +278,11 @@
         your papers, and select the appropriate track in OpenReview. We recommend you to use
         Institution emails to register your account on Openreview, as non-institution emails can take upto 2 weeks to
         register.</p>
+    <p>Decisions: July 08, 2025</p>
     <br>
     <p>1) <strong>Proceedings Track.</strong> Papers accepted to this track will be published in the official
         proceedings. Please use ICCV paper
-        templates. Page limit, excluding references, is 8 pages. Please strictly follow ICCV paper guidelines. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 01, 2025</i>.</p>
+        templates. Page limit, excluding references, is 8 pages. Please strictly follow ICCV paper guidelines. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 01, 2025</i>. Camera-ready dealine: August 10,2025.</p>
     <br>
     <p>2) <strong>Non-Proceedings Track.</strong> These papers would be presented at the workshop, but not included in
         the proceedings and can also be submitted to future venues. We also invite papers previously accepted to ICCV
