--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
 
       <section class="team-row">
         <figure>
-          <img src="paritosh.png" alt="Paritosh Parmar" class="circle-photo" />
+          <img src="paritosh_parmar.png" alt="Paritosh Parmar" class="circle-photo" />
           <p><a href="https://paritoshparmar.github.io/"><strong>Paritosh Parmar</strong></a></p>
         </figure>
         <figure>
@@ -405,7 +405,7 @@
           <p><a href="https://basurafernando.github.io/"><strong>Basura Fernando</strong></a></p>
         </figure>
         <figure>
-          <img src="brendan_morris.jpg" alt="Brendan Morris" class="circle-photo" />
+          <img src="brendan_morris.JPG" alt="Brendan Morris" class="circle-photo" />
           <p><a href="http://rtis.oit.unlv.edu/"><strong>Brendan Morris</strong></a></p>
         </figure>
       </section>
