--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         your papers, and select the appropriate track in OpenReview. We recommend you to use
         Institution emails to register your account on Openreview, as non-institution emails can take upto 2 weeks to
         register.</p>
-    <p>Decisions: July 08, 2025</p>
+    <p>Decisions: July 15, 2025</p>
     <br>
     <p>1) <strong>Proceedings Track.</strong> Papers accepted to this track will be published in the official
         proceedings. Please use ICCV paper
@@ -342,7 +342,7 @@
         2025 or any other
         venues. This tracks allows to share your work and receive feedback on your work, making it stronger. Work-in-Progress or Late
         breaking work providing provocations for new work and ideas to emerge, with or without an accompanying evaluation,
-        can also be submitted. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 03, 2025</i>.
+        can also be submitted. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 03, 2025</i>. We may consider opening Round 2 for Non-Proceedings Track after Round 1 review. More details to follow.
     </p>
     <br>
     <p>Please let us know if you face any problems or have any questions.</p>
