--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 <!--    <p><a href="https://www.cs.utexas.edu/~grauman/"><strong>Dr. Kristen Grauman</strong></a> (UT Austin + FAIR)</p>-->
 <!--    <p><a href="https://antoninofurnari.github.io/"><strong>Dr. Antonino Furnari</strong></a> (University of Catania)-->
 <!--    </p>-->
-<!--    <p><a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Garcia</strong></a> (Intuitive Surgical)-->
+<!--    <p><a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Nespolo</strong></a> (Intuitive Surgical)-->
 <!--    </p>-->
 <!--    <p><a href="https://stanford.edu/~eadeli/"><strong>Dr. Ehsan Adeli</strong></a> (Stanford University)</p>-->
 <!--    <p><a href="https://www.bristol.ac.uk/people/person/Walterio-Mayol-Cuevas-3eaed515-00fd-4112-94a8-7efe5a5fba94/"><strong>Dr. Walterio Mayol-Cuevas</strong></a> (University of Bristol)</p>-->
