--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@
     </p>
         </figure>
         <figure>
-          <img src="Rogerio_Garcia.JPEG" alt="Rogerio Garcia" class="circle-photo" />
-          <p><a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Garcia</strong></a> (Intuitive Surgical)
+          <img src="Rogerio_Garcia.JPEG" alt="Rogerio Nespolo" class="circle-photo" />
+          <p><a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Nespolo</strong></a> (Intuitive Surgical)
     </p>
         </figure>
         </div>
