--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <h2>Call for Papers</h2>
     <p>We invite contributions related to, but not limited to, the following areas:</p>
     <ul class="top-level">
-        <li><strong>Algorithms &amp; Applications for Skilled Human Activity and Performance Assessment</strong>
+        <li><h3><strong>Algorithms &amp; Applications for Skilled Human Activity and Performance Assessment</strong></h3>
             <ul>
                 <li>Human Skills/Performance/Action Quality Assessment/Evaluation in various domains such as Sports,
                     Industry/Assembly line, Musical and Dance performance, Surgical procedures, Fitness, Robotics, Gait
@@ -310,13 +310,13 @@
                 </li>
             </ul>
         </li>
-        <li><strong>Feedback Report Generation for Skills/Performance Improvement &amp; Guidance</strong>
+        <li><h3><strong>Feedback Report Generation for Skills/Performance Improvement &amp; Guidance</strong></h3>
             <ul>
                 <li>Captioning and Narration for Natural Language Corrective Feedback Generation</li>
                 <li>Visual/AR/VR-based Corrective Feedback Generation</li>
             </ul>
         </li>
-        <li><strong>New Datasets &amp; Benchmarks</strong>
+        <li><h3><strong>New Datasets &amp; Benchmarks</strong></h3>
             <ul>
                 <li>Datasets and Benchmarks</li>
                 <li>Multimodal, Multiview datasets</li>
@@ -324,9 +324,9 @@
                 <li>Fine-grained Video/Action generation</li>
             </ul>
         </li>
-        <li><strong>Metric learning for Skills/Action/Motion Quality Assessment</strong></li>
-        <li><strong>Fine-grained Action Recognition &amp; Segmentation</strong></li>
-        <li><strong>Representation Learning &amp; Learning Paradigms</strong>
+        <li><h3><strong>Metric learning for Skills/Action/Motion Quality Assessment</strong></h3></li>
+        <li><h3><strong>Fine-grained Action Recognition &amp; Segmentation</strong></h3></li>
+        <li><h3><strong>Representation Learning &amp; Learning Paradigms</strong></h3>
             <ul>
                 <li>Pose Estimation and Human-Centric Representation Learning, especially, suitable for challenging
                     scenarios such as high-speed, non-regular actions, occlusions, etc.
@@ -338,8 +338,8 @@
                 <li>Learnable Task Graphs</li>
             </ul>
         </li>
-        <li><strong>Explainability &amp; Interpretability in SAUAFG models</strong></li>
-        <li><strong>Ethics &amp; Fairness in SAUAFG</strong>
+        <li><h3><strong>Explainability &amp; Interpretability in SAUAFG models</strong></h3></li>
+        <li><h3><strong>Ethics &amp; Fairness in SAUAFG</strong></h3>
             <ul>
                 <li>Ethical Considerations, Fairness, and Bias in SAUAFG systems, and strategies to mitigate them.</li>
                 <li>Social Impact of SAUAFG, including its ability to democratize access to training and Performance
