--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
             text-align: justify;
 
         }
-        h1, h2, h3 {
+        h1, h2 {
             color: #333;
             font-size: 2.8em;  /* Title font size */
+        }
+        h3 {
+          font-size: 1.8em;
+          font-weight: bold;
+          text-transform: uppercase;
         }
         a {
             color: #0066cc;
