--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             font-size: 2.8em;  /* Title font size */
         }
         h3 {
-          font-size: 1.8em;
-          font-weight: bold;
-          text-transform: uppercase;
+          font-size: 1em;       /* same as normal text */
+          font-weight: normal;  /* not bold */
+          margin: 0;            /* remove extra spacing */
+          display: inline;      /* inline so it flows like text */
         }
         a {
             color: #0066cc;
