--- a/index.html
+++ b/index.html
@@ -396,25 +396,25 @@
             <td>Opening Remarks</td>
         </tr>
         <tr>
-            <td>Keynote-1 + QA</td>
+            <td>Keynote-1 + QA: Dr. Kristen Grauman. Topic: TBD</td>
         </tr>
         <tr>
-            <td>Keynote-2 + QA</td>
-        </tr>
-        <tr>
-            <td>Keynote-3 + QA</td>
+            <td>Keynote-2 + QA: Dr. Ehsan Adeli. Topic: TBD</td>
         </tr>
         <tr>
             <td>Tea break + Poster Session</td>
         </tr>
         <tr>
-            <td>Keynote-4 + QA</td>
+            <td>Keynote-3 + QA: Dr. Rogerio Nespolo. Topic: TBD</td>
         </tr>
         <tr>
-            <td>Keynote-5 + QA</td>
+            <td>Keynote-4 + QA: Dr. Gedas Bertasius. Topic: TBD</td>
         </tr>
         <tr>
-            <td>Keynote-6 + QA</td>
+            <td>Keynote-5 + QA: Dr. Walterio Mayol-Cuevas. Topic: TBD</td>
+        </tr>
+        <tr>
+            <td>Keynote-6 + QA: Dr. Antonino Furnari. Topic:TBD</td>
         </tr>
         <tr>
             <td>Closing Remarks</td>
