--- a/index.html
+++ b/index.html
@@ -388,38 +388,53 @@
 
 <section class="program section" id="program">
     <h2>Workshop Program</h2>
-    <table style="width:50%">
-        <tr>
-            <th>Program</th>
-        </tr>
-        <tr>
-            <td>Opening Remarks</td>
-        </tr>
-        <tr>
-            <td>Keynote-1 + QA: Dr. Kristen Grauman. Topic: TBD</td>
-        </tr>
-        <tr>
-            <td>Keynote-2 + QA: Dr. Ehsan Adeli. Topic: TBD</td>
-        </tr>
-        <tr>
-            <td>Tea break + Poster Session</td>
-        </tr>
-        <tr>
-            <td>Keynote-3 + QA: Dr. Rogerio Nespolo. Topic: TBD</td>
-        </tr>
-        <tr>
-            <td>Keynote-4 + QA: Dr. Gedas Bertasius. Topic: TBD</td>
-        </tr>
-        <tr>
-            <td>Keynote-5 + QA: Dr. Walterio Mayol-Cuevas. Topic: TBD</td>
-        </tr>
-        <tr>
-            <td>Keynote-6 + QA: Dr. Antonino Furnari. Topic:TBD</td>
-        </tr>
-        <tr>
-            <td>Closing Remarks</td>
-        </tr>
-    </table>
+<table style="width:60%; border-collapse: collapse; margin:auto; text-align:left;">
+  <thead>
+    <tr>
+      <th style="width:20%; border-bottom:2px solid #ccc; padding:8px;">Time</th>
+      <th style="border-bottom:2px solid #ccc; padding:8px;">Program</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="padding:8px;">13:45 – 14:00</td>
+      <td style="padding:8px;">Opening Remarks</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">14:00 – 14:30</td>
+      <td style="padding:8px;">Keynote-1 + QA: Dr. Kristen Grauman — Topic: TBD</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">14:30 – 15:00</td>
+      <td style="padding:8px;">Keynote-2 + QA: Dr. Ehsan Adeli — Topic: TBD</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">15:00 – 16:00</td>
+      <td style="padding:8px;">Tea Break + Poster Session</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">16:00 – 16:30</td>
+      <td style="padding:8px;">Keynote-3 + QA: Dr. Rogerio Nespolo — Topic: TBD</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">16:30 – 17:00</td>
+      <td style="padding:8px;">Keynote-4 + QA: Dr. Gedas Bertasius — Topic: TBD</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">17:00 – 17:30</td>
+      <td style="padding:8px;">Keynote-5 + QA: Dr. Walterio Mayol-Cuevas — Topic: TBD</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">17:30 – 18:00</td>
+      <td style="padding:8px;">Keynote-6 + QA: Dr. Antonino Furnari — Topic: TBD</td>
+    </tr>
+    <tr>
+      <td style="padding:8px;">18:00 – 18:15</td>
+      <td style="padding:8px;">Closing Remarks</td>
+    </tr>
+  </tbody>
+</table>
+
 </section>
 
 <section id="organizers" class="organizers section">
