--- a/index.html
+++ b/index.html
@@ -402,11 +402,19 @@
     </tr>
     <tr>
       <td style="padding:8px;">14:00 – 14:30</td>
-      <td style="padding:8px;">Keynote-1 + QA: Dr. Kristen Grauman — Topic: TBD</td>
+      <td style="padding:8px;">
+        Keynote-1 + QA:
+        <a href="https://www.cs.utexas.edu/~grauman/"><strong>Dr. Kristen Grauman</strong></a>
+        — Topic: TBD
+      </td>
     </tr>
     <tr>
       <td style="padding:8px;">14:30 – 15:00</td>
-      <td style="padding:8px;">Keynote-2 + QA: Dr. Ehsan Adeli — Topic: TBD</td>
+      <td style="padding:8px;">
+        Keynote-2 + QA:
+        <a href="https://stanford.edu/~eadeli/"><strong>Dr. Ehsan Adeli</strong></a>
+        — Topic: TBD
+      </td>
     </tr>
     <tr>
       <td style="padding:8px;">15:00 – 16:00</td>
@@ -414,19 +422,35 @@
     </tr>
     <tr>
       <td style="padding:8px;">16:00 – 16:30</td>
-      <td style="padding:8px;">Keynote-3 + QA: Dr. Rogerio Nespolo — Topic: TBD</td>
+      <td style="padding:8px;">
+        Keynote-3 + QA:
+        <a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Nespolo</strong></a>
+        — Topic: TBD
+      </td>
     </tr>
     <tr>
       <td style="padding:8px;">16:30 – 17:00</td>
-      <td style="padding:8px;">Keynote-4 + QA: Dr. Gedas Bertasius — Topic: TBD</td>
+      <td style="padding:8px;">
+        Keynote-4 + QA:
+        <a href="https://www.gedasbertasius.com/"><strong>Dr. Gedas Bertasius</strong></a>
+        — Topic: TBD
+      </td>
     </tr>
     <tr>
       <td style="padding:8px;">17:00 – 17:30</td>
-      <td style="padding:8px;">Keynote-5 + QA: Dr. Walterio Mayol-Cuevas — Topic: TBD</td>
+      <td style="padding:8px;">
+        Keynote-5 + QA:
+        <a href="https://www.bristol.ac.uk/people/person/Walterio-Mayol-Cuevas-3eaed515-00fd-4112-94a8-7efe5a5fba94/"><strong>Dr. Walterio Mayol-Cuevas</strong></a>
+        — Topic: TBD
+      </td>
     </tr>
     <tr>
       <td style="padding:8px;">17:30 – 18:00</td>
-      <td style="padding:8px;">Keynote-6 + QA: Dr. Antonino Furnari — Topic: TBD</td>
+      <td style="padding:8px;">
+        Keynote-6 + QA:
+        <a href="https://antoninofurnari.github.io/"><strong>Dr. Antonino Furnari</strong></a>
+        — Topic: TBD
+      </td>
     </tr>
     <tr>
       <td style="padding:8px;">18:00 – 18:15</td>
@@ -434,6 +458,7 @@
     </tr>
   </tbody>
 </table>
+
 
 </section>
 
