--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
 <section class="program section" id="program">
     <h2>Workshop Program</h2>
-<table style="width:60%; border-collapse: collapse; margin:auto; text-align:left;">
+<table style="width:80%; border-collapse: collapse; margin-left:0; text-align:left;">
   <thead>
     <tr>
       <th style="width:20%; border-bottom:2px solid #ccc; padding:8px;">Time</th>
