--- a/index.html
+++ b/index.html
@@ -249,8 +249,8 @@
         enhances human ability.
     </p>
     <br>
-    <p> Date & Timings: <strong>October 19, 2025 | 13:45-18:00 (Afternoon session)</strong></p>
-    <p> Venue: <strong>Hawaii Convention Center, Room 318-A</strong></p>
+    <p>Date & Timings: <strong style="color:blue;">October 19, 2025 | 13:45–18:00 (Afternoon session)</strong></p>
+    <p> Venue: <strong style="color:blue;">Hawaii Convention Center, Room 318-A</strong></p>
 </section>
 
 <section class="speakers section" id="speakers">
