--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
       <td style="padding:8px;">
         Keynote-3 + QA:
         <a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Nespolo</strong></a>
-        — Topic: TBD
+        — Topic: AI for the Operating Room: From Surgical Activity Recognition to Skill Assessment and Feedback
       </td>
     </tr>
     <tr>
@@ -441,7 +441,7 @@
       <td style="padding:8px;">
         Keynote-5 + QA:
         <a href="https://www.bristol.ac.uk/people/person/Walterio-Mayol-Cuevas-3eaed515-00fd-4112-94a8-7efe5a5fba94/"><strong>Dr. Walterio Mayol-Cuevas</strong></a>
-        — Topic: TBD
+        — Topic: From Skill to Struggle: Datasets and Recent Work Towards Understanding When to Offer Help
       </td>
     </tr>
     <tr>
@@ -449,7 +449,7 @@
       <td style="padding:8px;">
         Keynote-6 + QA:
         <a href="https://antoninofurnari.github.io/"><strong>Dr. Antonino Furnari</strong></a>
-        — Topic: TBD
+        — Topic: From Observation to Intervention: Mistake Detection and Procedural Assistance in Egocentric Vision
       </td>
     </tr>
     <tr>
