--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@
 
 <section class="program section" id="program">
     <h2>Workshop Program</h2>
-<table style="width:80%; border-collapse: collapse; margin-left:0; text-align:left;">
+<table style="width:100%; border-collapse: collapse; margin-left:0; text-align:left;">
   <thead>
     <tr>
       <th style="width:20%; border-bottom:2px solid #ccc; padding:8px;">Time</th>
@@ -425,7 +425,7 @@
       <td style="padding:8px;">
         Keynote-3 + QA:
         <a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Nespolo</strong></a>
-        — Topic: AI for the Operating Room: From Surgical Activity Recognition to Skill Assessment and Feedback
+        — Topic: <i>AI for the Operating Room: From Surgical Activity Recognition to Skill Assessment and Feedback</i>
       </td>
     </tr>
     <tr>
@@ -441,7 +441,7 @@
       <td style="padding:8px;">
         Keynote-5 + QA:
         <a href="https://www.bristol.ac.uk/people/person/Walterio-Mayol-Cuevas-3eaed515-00fd-4112-94a8-7efe5a5fba94/"><strong>Dr. Walterio Mayol-Cuevas</strong></a>
-        — Topic: From Skill to Struggle: Datasets and Recent Work Towards Understanding When to Offer Help
+        — Topic: <i>From Skill to Struggle: Datasets and Recent Work Towards Understanding When to Offer Help</i>
       </td>
     </tr>
     <tr>
@@ -449,7 +449,7 @@
       <td style="padding:8px;">
         Keynote-6 + QA:
         <a href="https://antoninofurnari.github.io/"><strong>Dr. Antonino Furnari</strong></a>
-        — Topic: From Observation to Intervention: Mistake Detection and Procedural Assistance in Egocentric Vision
+        — Topic: <i>From Observation to Intervention: Mistake Detection and Procedural Assistance in Egocentric Vision</i>
       </td>
     </tr>
     <tr>
