--- a/index.html
+++ b/index.html
@@ -416,6 +416,10 @@
         — Topic: TBD
       </td>
     </tr>
+      <tr>
+      <td style="padding:8px;">TBD</td>
+      <td style="padding:8px;">Lightning Talks</td>
+    </tr>
     <tr>
       <td style="padding:8px;">15:00 – 16:00</td>
       <td style="padding:8px;">Tea Break + Poster Session</td>
