--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       <td style="padding:8px;">
         Keynote-1 + QA:
         <a href="https://www.cs.utexas.edu/~grauman/"><strong>Dr. Kristen Grauman</strong></a>
-        — Topic: Show and Tell: Skill Learning from Video
+        — Topic: <i>Show and Tell: Skill Learning from Video</i>
       </td>
     </tr>
     <tr>
@@ -413,7 +413,7 @@
       <td style="padding:8px;">
         Keynote-2 + QA:
         <a href="https://stanford.edu/~eadeli/"><strong>Dr. Ehsan Adeli</strong></a>
-        — Topic: Multimodal Perception and Generation of Human Behaviors 
+        — Topic: <i>Multimodal Perception and Generation of Human Behaviors</i> 
       </td>
     </tr>
       <tr>
