--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
       <td style="padding:8px;">
         Keynote-4 + QA:
         <a href="https://www.gedasbertasius.com/"><strong>Dr. Gedas Bertasius</strong></a>
-        — Topic: TBD
+        — Topic: <i>Can AI Models Teach You to Shoot Like Steph Curry? 🏀 Challenges in Expert-Level Skill Analysis</i>
       </td>
     </tr>
     <tr>
