--- a/index.html
+++ b/index.html
@@ -417,15 +417,15 @@
       </td>
     </tr>
       <tr>
-      <td style="padding:8px;">TBD</td>
+      <td style="padding:8px;">15:00-15:30</td>
       <td style="padding:8px;">Lightning Talks</td>
     </tr>
     <tr>
-      <td style="padding:8px;">15:00 – 16:00</td>
+      <td style="padding:8px;">15:30 – 16:15</td>
       <td style="padding:8px;">Tea Break + Poster Session</td>
     </tr>
     <tr>
-      <td style="padding:8px;">16:00 – 16:30</td>
+      <td style="padding:8px;">16:15 – 16:45</td>
       <td style="padding:8px;">
         Keynote-3 + QA:
         <a href="https://www.linkedin.com/in/rogerionespolo"><strong>Dr. Rogerio Nespolo</strong></a>
@@ -433,15 +433,15 @@
       </td>
     </tr>
     <tr>
-      <td style="padding:8px;">16:30 – 17:00</td>
+      <td style="padding:8px;">16:45 – 17:15</td>
       <td style="padding:8px;">
         Keynote-4 + QA:
         <a href="https://www.gedasbertasius.com/"><strong>Dr. Gedas Bertasius</strong></a>
-        — Topic: <i>Can AI Models Teach You to Shoot Like Steph Curry? 🏀 Challenges in Expert-Level Skill Analysis</i>
+        — Topic: <i>Can AI Models Teach You to Shoot Like Steph Curry?</i> 🏀 <i></i>Challenges in Expert-Level Skill Analysis</i>
       </td>
     </tr>
     <tr>
-      <td style="padding:8px;">17:00 – 17:30</td>
+      <td style="padding:8px;">17:15 – 17:45</td>
       <td style="padding:8px;">
         Keynote-5 + QA:
         <a href="https://www.bristol.ac.uk/people/person/Walterio-Mayol-Cuevas-3eaed515-00fd-4112-94a8-7efe5a5fba94/"><strong>Dr. Walterio Mayol-Cuevas</strong></a>
@@ -449,7 +449,7 @@
       </td>
     </tr>
     <tr>
-      <td style="padding:8px;">17:30 – 18:00</td>
+      <td style="padding:8px;">17:45 – 18:15</td>
       <td style="padding:8px;">
         Keynote-6 + QA:
         <a href="https://antoninofurnari.github.io/"><strong>Dr. Antonino Furnari</strong></a>
@@ -457,7 +457,7 @@
       </td>
     </tr>
     <tr>
-      <td style="padding:8px;">18:00 – 18:15</td>
+      <td style="padding:8px;">18:15 – 18:30</td>
       <td style="padding:8px;">Closing Remarks</td>
     </tr>
   </tbody>
