--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
       </td>
     </tr>
       <tr>
-      <td style="padding:8px;">15:00-15:30</td>
+      <td style="padding:8px;">15:00 – 15:30</td>
       <td style="padding:8px;">Lightning Talks</td>
     </tr>
     <tr>
