--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
         enhances human ability.
     </p>
     <br>
-    <p><strong>Date & Timings:</strong> <strong style="color:blue;">October 19, 2025 | 13:45–18:00 (Afternoon session)</strong></p>
+    <p><strong>Date & Timings:</strong> <strong style="color:blue;">October 19, 2025 | 13:45–18:30 (Afternoon session)</strong></p>
     <p><strong>Venue:</strong> <strong style="color:blue;">Hawaii Convention Center, Room 318-A</strong></p>
 </section>
 
@@ -380,7 +380,7 @@
         2025 or any other
         venues. This tracks allows to share your work and receive feedback on your work, making it stronger. Work-in-Progress or Late
         breaking work providing provocations for new work and ideas to emerge, with or without an accompanying evaluation,
-        can also be submitted. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 03, 2025</i>. We may consider opening Round 2 for Non-Proceedings Track after Round 1 review. More details to follow.
+        can also be submitted. Supplementary material is allowed. We will follow single-stage review process--we will not have rebuttal stage. Tentative Submission Deadline is: <i>July 03, 2025</i>. <del>We may consider opening Round 2 for Non-Proceedings Track after Round 1 review. More details to follow.</del> We have received a strong number of submissions during the initial round, so we won’t be holding an official second round of submissions. However, if you are still interested in presenting your work, please feel free to reach out to us directly, and we will be happy to discuss potential opportunities.
     </p>
     <br>
     <p>Please let us know if you face any problems or have any questions.</p>
