--- a/index.html
+++ b/index.html
@@ -251,6 +251,8 @@
     <br>
     <p><strong>Date & Timings:</strong> <strong style="color:blue;">June 03/04, 2026 | [Time-TBA]</strong></p>
     <p><strong>Venue:</strong> <strong style="color:blue;">Denver Convention Center [Further Details TBA]</strong></p>
+    <br>
+    <p><strong>Past edition:</strong> <a href="https://sauafg-workshop.github.io/edition_iccv_2025.html">ICCV 2025</a>
 </section>
 
 <section class="speakers section" id="speakers">
