--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
 <body>
 
 <header>
-    <h1><a href="https://cvpr.thecvf.com/">CVPR 2026</a> Workshop on AI-driven Skilled Activity Understanding,
-        Assessment & Feedback Generation</h1>
+    <h1>Second International Workshop on AI-driven Skilled Activity Understanding,
+        Assessment & Feedback Generation at <a href="https://cvpr.thecvf.com/">CVPR 2026</a></h1>
 
     <!-- Paper Link -->
     <span class="link-block">
