--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 <section class="papersubmission section" id="papersubmission">
     <h2>Paper Submission</h2>
     <p>We have following two Paper Tracks. Please use this <a
-            href="https://openreview.net/group?id=thecvf.com/ICCV/2025/Workshop/SAUAFG">[Openreview Link-TBA]</a> to submit
+            href="https://openreview.net/group?id=thecvf.com/CVPR/2026/Workshop/SAUAFG">Openreview Link</a> to submit
         your papers, and select the appropriate track in OpenReview. We recommend you to use
         Institution emails to register your account on Openreview, as non-institution emails can take upto 2 weeks to
         register.</p>
